--- a/src/giaodien/DangNhap.form
+++ b/src/giaodien/DangNhap.form
@@ -220,6 +220,9 @@
                 <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="text" type="java.lang.String" value="Qu&#xea;n m&#x1ead;t kh&#x1ea9;u?"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblQuenMatKhauMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnDangNhap">
               <Properties>
