--- a/src/giaodien/QuenMatKhau3.form
+++ b/src/giaodien/QuenMatKhau3.form
@@ -24,7 +24,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
-          <Component id="lbEmail" alignment="0" max="32767" attributes="0"/>
+          <Component id="lblTenNguoiDung" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="44" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
@@ -39,7 +39,7 @@
               </Group>
               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
           </Group>
-          <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
+          <Component id="lblBack" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -48,7 +48,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="lbEmail" min="-2" pref="54" max="-2" attributes="0"/>
+              <Component id="lblTenNguoiDung" min="-2" pref="54" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txtNhapLai" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
@@ -62,7 +62,7 @@
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Component id="btnXacNhan" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="61" max="32767" attributes="0"/>
-              <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+              <Component id="lblBack" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -77,13 +77,13 @@
         <Property name="text" type="java.lang.String" value="C&#x1ead;p nh&#x1ead;t m&#x1ead;t kh&#x1ea9;u c&#x1ee7;a"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lbEmail">
+    <Component class="javax.swing.JLabel" name="lblTenNguoiDung">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="something@gmail.com.vn"/>
+        <Property name="text" type="java.lang.String" value="Nguyen Van A"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtMatKhauMoi">
@@ -123,12 +123,20 @@
         </Property>
         <Property name="text" type="java.lang.String" value="X&#xe1;c nh&#x1ead;n"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXacNhanActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="lblBack">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="back"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblBackMouseClicked"/>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblBackMouseEntered"/>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblBackMouseExited"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
