hoan thanh form hoadonchitiet

--- a/src/giaodien/HoaDonChiTiet.form
+++ b/src/giaodien/HoaDonChiTiet.form
@@ -51,7 +51,7 @@
                           <Component id="lbThuNgan" alignment="0" pref="124" max="32767" attributes="0"/>
                           <Component id="lbNgayIn" alignment="0" max="32767" attributes="0"/>
                           <Component id="lbKhachHang" alignment="0" max="32767" attributes="0"/>
-                          <Component id="lbMaHoaDon" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lblMaHoaDon" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="lblChungNhan" max="32767" attributes="0"/>
@@ -70,7 +70,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="mahoadon" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbMaHoaDon" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblMaHoaDon" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -111,7 +111,7 @@
         <Property name="text" type="java.lang.String" value="M&#xe3; ho&#xe1; &#x111;&#x1a1;n:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lbMaHoaDon">
+    <Component class="javax.swing.JLabel" name="lblMaHoaDon">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
@@ -182,6 +182,25 @@
                 <Column editable="false" title="S&#x1ed1; L&#x1b0;&#x1ee3;ng" type="java.lang.Object"/>
                 <Column editable="false" title="Gi&#xe1;" type="java.lang.Object"/>
               </Table>
+            </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="250" resizable="false">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="80" resizable="false">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+              </TableColumnModel>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
