--- a/src/giaodien/QuanLyHoaDon.form
+++ b/src/giaodien/QuanLyHoaDon.form
@@ -137,14 +137,14 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="4">
-                    <Column editable="true" title="M&#xe3; Ho&#xe1; &#x110;&#x1a1;n" type="java.lang.Object">
-                      <Data value=""/>
-                      <Data value=""/>
-                      <Data value=""/>
+                    <Column editable="true" title="Title 1" type="java.lang.Object">
+                      <Data value="9"/>
+                      <Data value="null"/>
+                      <Data value="null"/>
                       <Data value="null"/>
                     </Column>
-                    <Column editable="true" title="Th&#x1edd;i gian" type="java.lang.Object"/>
-                    <Column editable="true" title="T&#x1ed5;ng ti&#x1ec1;n" type="java.lang.Object"/>
+                    <Column editable="true" title="Title 2" type="java.lang.Object"/>
+                    <Column editable="true" title="Title 3" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
