--- a/src/giaodien/Home.form
+++ b/src/giaodien/Home.form
@@ -842,7 +842,7 @@
                               <Font name="Tahoma" size="16" style="0"/>
                             </Property>
                             <Property name="horizontalAlignment" type="int" value="4"/>
-                            <Property name="text" type="java.lang.String" value="0&#x111;"/>
+                            <Property name="text" type="java.lang.String" value="0"/>
                           </Properties>
                         </Component>
                       </SubComponents>
