--- a/src/giaodien/QuanLyLoaiSanPham.form
+++ b/src/giaodien/QuanLyLoaiSanPham.form
@@ -33,13 +33,14 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="txtTenLoai" max="32767" attributes="0"/>
-                          <Component id="cbxLoai" max="32767" attributes="0"/>
+                          <Component id="cbxLoai" pref="263" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
                       <Component id="jButton2" min="-2" pref="154" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButton1" pref="165" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -83,7 +84,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="T&#xea;n lo&#x1ea1;i"/>
+        <Property name="text" type="java.lang.String" value="M&#xe3; lo&#x1ea1;i"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbxLoai">
@@ -118,6 +119,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
