--- a/src/giaodien/QuanLySanPham.form
+++ b/src/giaodien/QuanLySanPham.form
@@ -10,6 +10,7 @@
       </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Qu&#x1ea3;n l&#xfd; s&#x1ea3;n ph&#x1ea9;m"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -39,7 +40,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="pnlMenun" alignment="0" pref="462" max="32767" attributes="0"/>
+          <Component id="pnlMenun" alignment="0" pref="464" max="32767" attributes="0"/>
           <Component id="pnlScreenMain" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
